--- a/web/system/modules/no.npolar.mosj/resources/style/largescreens.css
+++ b/web/system/modules/no.npolar.mosj/resources/style/largescreens.css
@@ -502,8 +502,8 @@ h5 {
     z-index: 1;
     top: -20%;
     width: 100%;
-    height: 150%;
-    max-height: 150%;
+    height: 120%;
+    max-height: 120%;
 }
 /*#hero-canvas-overlay {
     box-shadow:0 0 100px 40px #000 inset;
