--- a/web/system/modules/no.npolar.mosj/resources/style/navigation.css
+++ b/web/system/modules/no.npolar.mosj/resources/style/navigation.css
@@ -333,6 +333,7 @@ a.nav-toggler {
     font-size:0.8em;
     margin:0 auto;
     max-width:1200px;
+    z-index:99;
 }
 /* all menu links */
 #nav,
